<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Crear">

    <TextView
        android:id="@+id/tvTitulo_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/layout_bg"
        android:text="@string/crear_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo_crear">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCodigo_crear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/codigo_label"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvNombre_crear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/nombre_label"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvPrecio_crear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:text="@string/precio_label"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etCodigo_crear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/codigo_hint"
                    android:inputType="numberSigned"
                    android:textColor="@color/white"
                    android:textColorHint="@color/ligth" />

                <EditText
                    android:id="@+id/etNombre_crear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/nombre_hint"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/ligth" />

                <EditText
                    android:id="@+id/etPrecio_crear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/precio_hint"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/ligth" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/crearBtn_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="crear"
            android:text="@string/crear_btn"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="volver"
        android:text="@string/volver_btn"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>