<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Modificar">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modificar_title"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/volverBtn_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <EditText
            android:id="@+id/etCodigo_modificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/codigo_hint"
            android:inputType="numberSigned"
            android:textColor="@color/white"
            android:textColorHint="@color/ligth" />

        <EditText
            android:id="@+id/etNombre_modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nombre_hint"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/ligth" />

        <EditText
            android:id="@+id/etPrecio_modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/precio_hint"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:textColorHint="@color/ligth" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/verBtn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="ver"
                android:text="@string/ver_btn"
                android:textColor="@color/white"
                app:backgroundTint="@color/teal_700" />

            <Button
                android:id="@+id/borrarBtn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:onClick="modificar"
                android:text="@string/modificar_btn"
                android:textColor="@color/white"
                app:backgroundTint="@color/teal_700" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/volverBtn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="volver"
        android:text="@string/volver_btn"
        android:textColor="@color/white"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>